retrieveUnpackaged/objects/Training__c.object
<CustomObject>
    <fields>
        <fullName>Count__c</fullName>
        <label>Count</label>
        <summaryForeignKey>TStudent__c.Training__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Fee__c</fullName>
        <label>Total Fee</label>
        <summarizedField>TStudent__c.Fee__c</summarizedField>
        <summaryForeignKey>TStudent__c.Training__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Number_Of_Students__c</fullName>
        <label>Total Number Of Students</label>
        <summaryForeignKey>TStudent__c.Training__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Training</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Training Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trainings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>